--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="TestSystem (shared)\;Tests\;Tests\Math\;" />
+		<Option virtualFolders="TestSystem (shared)/;Tests/;Tests/Math/;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -22,10 +22,9 @@
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineTools.a" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineSystem.a" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineCore.a" />
-					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Linux32\DebugSharedrtStatic\libboost_unit_test_framework.a" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineCommon.a" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools.a" />
+					<Add library="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/libboost_unit_test_framework.a" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
 				</Linker>
 				<ExtraCommands>
@@ -44,9 +43,9 @@
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
-					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Win32\DebugSharedrtStatic\libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCommon.lib" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineTools.lib" />
+					<Add library="../../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic/libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic" />
 				</Linker>
 				<ExtraCommands>
@@ -67,7 +66,7 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_QUIMERAENGINE" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Win32\DebugSharedrtStatic\libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
+					<Add library="../../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic/libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
 					<Add library="libQuimeraEngineCommon.dll.a" />
 					<Add library="libQuimeraEngineTools.dll.a" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
@@ -90,20 +89,20 @@
 					<Add option="-g" />
 					<Add option="-m32" />
 					<Add option="-D_DEBUG" />
-					<Add option="-DQE_PREPROCESSOR_COMPILER_IMPORT" />
+					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_QUIMERAENGINE" />
 					<Add directory="../../../../tests/unit/testmodule_tools" />
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add library=".\QuimeraEngineTools.so" />
-					<Add library=".\QuimeraEngineCore.so" />
-					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Linux32\DebugSharedrtStatic\libboost_unit_test_framework.a" />
+					<Add library="./QuimeraEngineTools.so" />
+					<Add library="./QuimeraEngineCommon.so" />
+					<Add library="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/libboost_unit_test_framework.a" />
 				</Linker>
 				<ExtraCommands>
 					<Add before="mkdir -p $(TARGET_OUTPUT_DIR)" />
-					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineCore.so&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
+					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineCommon.so&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineTools.so&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
-					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineCore.so&quot; &quot;.&quot;' />
+					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineCommon.so&quot; &quot;.&quot;' />
 					<Add before='cp &quot;$(TARGET_OUTPUT_DIR)../../../../bin/CodeBlocks10/$(TARGET_NAME)/QuimeraEngineTools.so&quot; &quot;.&quot;' />
 					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
 					<Add after="rm *.so" />
