459 - Upgrade Boost libraries to 1.55.0 365 - Upgrade projects to Code::Blocks 12.11 Done. The code has been adapted to compile using the last version of Boost libraries and the last version of the GCC (4.7.1) that comes with the last version of Code::Blocks (13.12). The method ToString of SQFloat and SQInteger has been modified to not use the Boost libraries (their behavior changed). Now they use the STL instead. Makefiles were modified to avoid producing and linking useless libraries.

--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Math/;" />
+		<Option virtualFolders="Math\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -46,8 +46,6 @@
 				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-fpermissive" />
@@ -56,7 +54,7 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
 				</Compiler>
 				<Linker>
-					<Add library="libQuimeraEngineCommon.dll.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				</Linker>
 			</Target>
