--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Common/Common.cbp
@@ -6,7 +6,7 @@
 		<Option execution_dir="/home/mar/Proyectos/C++/QuimeraEngine/projects/CodeBlocks10/QuimeraEngine/" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="DataTypes/;" />
+		<Option virtualFolders="DataTypes\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -49,8 +49,6 @@
 				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
