--- a/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/System/System.cbp
@@ -47,8 +47,6 @@
 				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				<Option type="3" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
-				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
@@ -57,10 +55,11 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_COMMON" />
 				</Compiler>
 				<Linker>
-					<Add library="libQuimeraEngineCommon.dll.a" />
-					<Add library="libQuimeraEngineTools.dll.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineTools.dll" />
+					<Add library="libboost_thread-mt-d.a" />
+					<Add library="libboost_system-mt-d.a" />
 					<Add directory="../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic" />
-					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
 				</Linker>
 			</Target>
 			<Target title="DebugLinux32SharedrtDynamic">
